--- a/src/components/CarnetList.css
+++ b/src/components/CarnetList.css
@@ -43,6 +43,20 @@
   cursor: pointer;
   border-radius: 10px;
 }
+.busqueda-container {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.busqueda-input {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
 
 .card-wrapper:hover {
   transform: scale(1.03);
@@ -77,6 +91,12 @@
 
 .animate-slide-in {
   animation: slideIn 0.3s ease-in-out;
+}
+.ficha-info {
+  margin-top: 5px;
+  font-size: 12px;
+  color: #333;
+  text-align: left;
 }
 
 @keyframes slideIn {
